2003-12-14  Alan Modra  <amodra@bigpond.net.au>

	* gas/mmix/basep-8.d: Update for lcomm symbol type change.
	* gas/mmix/basep-9.d: Likewise.

2003-12-10  Zack Weinberg  <zack@codesourcery.com>

	* gas/ppc/booke.s: Add two more forms of the mbar instruction
	and three forms of the tlbwe instruction.
	* gas/ppc/booke.d: Update to match.

2003-12-10  Paul Brook  <paul@codesourcery.com>

	* gas/arm/arm.exp: Add r15-bad.
	* gas/arm/r15-bad.s: New file.
	* gas/arm/r15-bad.l: New file.

2003-12-06  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/elf-rel16.[sd]: New test.
	* gas/mips/mips.exp: Run it.
	* gas/mips/elf-rel-xgot-n32.d: Fix addends for "lw $5,dl1+34($5)".
	* gas/mips/elf-rel-xgot-n64.d: Likewise.

2003-12-05  Ricardo Anguiano <anguiano@codesourcery.com>
	    Mark Mitchell  <mark@codesourcery.com>
	    Richard Earnshaw  <rearnsha@arm.com>

	* gas/arm/arm.exp: Add archv6 and thumbv6.
	* gas/arm/archv6.d: New file.
	* gas/arm/archv6.s: Likewise.
	* gas/arm/thumbv6.d: Likewise.
	* gas/arm/thumbv6.s: Likewise.

2003-12-06  Christian Groessler  <chris@groessler.org>

	* gas/z8k/ctrl-names.d: New file.
	* gas/z8k/ctrl-names.s: New file.
	* gas/z8k/z8k.exp: Run new tests.

2003-12-02  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* gas/m32r/m32r2.exp: New file for m32r2.
	* gas/m32r/m32r2.s: Likewise.
	* gas/m32r/m32r2.d: Likewise.

2003-12-03  Nick Clifton  <nickc@redhat.com>

	* gas/vax/vax.exp (do_quad): Treat a vax-*-linux-gnu target as an
	ELF target.

2003-12-01  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* gas/sh/basic.exp: Define ASFLAGS appropriately and don't do
	dsp test for sh64/sh5 targets.
	* gas/sh/sh64/crange1.s: Tidy up to match data alignment.
	* gas/sh/sh64/crange1-1.d: Update.
	* gas/sh/sh64/crange1-2.d: Likewise.
	* gas/sh/sh64/datal32-3.d: Likewise.
	* gas/sh/sh64/datal64-3.d: Likewise.
	* gas/sh/sh64/localcom-1.d: Likewise.

2003-11-27  Alexandre Oliva  <aoliva@redhat.com>

	* gas/frv/reloc1.[sd]: Test references to external symbols and